corregimos el error en nuestro archivo yml

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,6 +11,4 @@ jobs:
     steps:
       - name: Say hello
         run: |
-          date
-        run: | 
-          ls -la
+          date && ls -la
