--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,5 @@ jobs:
         run: npm install
       - name: npm build
         run: npm build
+      - name: Deploy to Heroku
+        uses: AkhileshNS/heroku-deploy@v3.12.12
